# fetchatui

./: Cargo.toml  README.md  icon.txt
src/: main.rs  tui.rs  ui.rs
